@@ -1,3 +1,9 @@
+2005-11-15  Andy Wingo  <wingo@pobox.com>
+
+	* check/gst/gstpipeline.c (test_base_time): Punt around the
+	problem of the probe not being called, because that's not the
+	issue I'm looking at...
+	
 2005-11-15  Wim Taymans  <wim@fluendo.com>
 
 	* gst/base/gstbasesink.c: (gst_base_sink_handle_object):
